deployment.yml
#deploymet/app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merpay-pubsub-server
  labels:
    app: merpay-pubsub-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: merpay-pubsub-server
  template:
    metadata:
      labels:
        app: merpay-pubsub-server
    spec:
      containers:
        - name: merpay-pubsub-server
          image: merpay_merpay-pubsub-server
          resources:
            limits:
              cpu: 2000m
              memory: 800Mi
            requests:
              cpu: 1500m
              memory: 400Mi
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            failureThreshold: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            failureThreshold: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: merpay-pubsub-server-service
spec:
  selector:
    app: merpay-pubsub-server-service
  ports:
    - port: 8090
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merpay-pubsub-server-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: merpay-pubsub-server-service
            port:
              number: 8090
